# sradg-contextualizers

./: .gitignore  RAG-Powered-Reconciliation-Assistant-v2.pptx  README.md  pyproject.toml
code/src/app/: __init__.py
code/src/app/static/css/: index.css
code/src/app/static/js/: index.js
code/src/app/templates/: index.html
code/src/backend/: Interface.py  analyze.py  create_vector_db.py  extract_details.py  extract_meta_data.py  response_cache.json
code/src/backend/archive/: create_database.py  query.py  sample.csv  sample_yes_only.csv
code/src/backend/data/: new3financial_data.csv  sample_10k.csv
