[project]
name = "sradg"
version = "0.1.0"
description = "Implement an anomaly detection system within the reconciliation process, by leveraging historical data to identify patterns, trends, and expected ranges"
authors = [
    {name = "Sugaanth Mohan",email = "sugaanth.mohan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "chromadb (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
