[project]
name = "sradg"
version = "0.1.0"
description = "Implement an anomaly detection system within the reconciliation process, by leveraging historical data to identify patterns, trends, and expected ranges"
authors = [
    {name = "Sugaanth Mohan",email = "sugaanth.mohan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "numpy (>=1.22.4,<2.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "langchain-google-genai (>=2.1.1,<3.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "einops (>=0.8.1,<0.9.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn code.src.app:app --port 2710 --reload"